--- a/1listremove/style.css
+++ b/1listremove/style.css
@@ -28,7 +28,7 @@ input[type="text"]:focus {
   /* margin-left: auto;
   margin-right: auto; */
   margin: auto;
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   /* background-color: lightyellow; */
 }
 
